--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.1.2",
     "@angular/platform-browser-dynamic": "^15.1.2",
     "@angular/router": "^15.1.2",
+    "@ngrx/store": "^15.2.1",
     "ngrx/store": "*",
     "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
