--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.1.2",
     "@angular/router": "^15.1.2",
     "@ngrx/store": "^15.2.1",
+    "@ngrx/store-devtools": "^15.2.1",
     "ngrx/store": "*",
     "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
