--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.2",
+    "@angular/animations": "15.1.4",
     "@angular/cdk": "15.1.4",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
-    "@angular/forms": "^15.1.2",
-    "@angular/material": "^15.1.4",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
-    "@ngrx/store": "^15.2.1",
-    "@ngrx/store-devtools": "^15.2.1",
-    "ngrx/store": "*",
-    "ngx-indexed-db": "^16.0.0",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.12.0"
+    "@angular/common": "15.1.4",
+    "@angular/compiler": "15.1.4",
+    "@angular/core": "15.1.4",
+    "@angular/forms": "15.1.4",
+    "@angular/material": "15.1.4",
+    "@angular/platform-browser": "15.1.4",
+    "@angular/platform-browser-dynamic": "15.1.4",
+    "@angular/router": "15.1.4",
+    "@ngrx/store": "15.3.0",
+    "@ngrx/store-devtools": "15.3.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "ngx-indexed-db": "16.0.0",
+    "rxjs": "7.8.0",
+    "tslib": "2.5.0",
+    "undefined": "0.1.0",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.1.0-next.2",
